--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 /target
+/lib
 /classes
 /checkouts
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-/.lein-*
-/.nrepl-port
+.lein-deps-sum
+.lein-failures
+.lein-plugins
+.lein-repl-history
